Added script to separate file and changed background color to gradient.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lab3</title>
+  <title>Lab3 Alexander Vorobiov-Wilson</title>
   <style>
     td {
       border-style: solid;
       border-color: black;
       border-width: 1px;
+    }
+
+    body {
+      background: rgb(238, 174, 202);
+      background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
     }
   </style>
 </head>
@@ -23,49 +28,7 @@
   <input type="number" id="rowToDeleteNumber" min="1" required disabled />
 
   <div id="container"></div>
-  <script>
-    function createTable() {
-      const table = document.createElement("table");
-      table.setAttribute("id", "mytable");
-      document.getElementById("container").appendChild(table);
+  <script src="script.js"> </script>
+</body >
 
-      document.getElementById("btnCreateTable").disabled = true;
-      document.getElementById("btnAddRow").disabled = false;
-      document.getElementById("btnRemoveRow").disabled = false;
-      document.getElementById("rowToDeleteNumber").disabled = false;
-    }
-
-    function addRowCount() {
-      const rowCountInput = document.getElementById("rowCount");
-      const newRowCount = parseInt(rowCountInput.value) + 1;
-      rowCountInput.value = newRowCount;
-      return newRowCount;
-    }
-
-    function addRow() {
-
-      const table = document.getElementById("mytable");
-      const rowNum = addRowCount();
-      const row = document.createElement("tr");
-      row.setAttribute("id", "num-" + rowNum);
-
-      const tdNum = document.createElement("td");
-      tdNum.innerText = rowNum;
-
-      const tdVal = document.createElement("td");
-      tdVal.innerText = "value";
-
-      row.appendChild(tdNum);
-      row.appendChild(tdVal);
-
-      table.appendChild(row);
-    }
-
-    function removeRow() {
-      const numberToRemove = document.getElementById("rowToDeleteNumber").value;
-      document.getElementById("num-" + numberToRemove).remove();
-    }
-  </script>
-</body>
-
-</html>
+</html >
