--- a/index.html
+++ b/index.html
@@ -5,26 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Lab3 Alexander Vorobiov-Wilson</title>
-  <style>
-    td {
-      border-style: solid;
-      border-color: black;
-      border-width: 1px;
-    }
-
-    body {
-      background: rgb(238, 174, 202);
-      background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
-    }
-  </style>
 </head>
 
 <body>
   <input type="hidden" id="rowCount" value="0" />
-  <button onclick="createTable()" id="btnCreateTable">создать таблицу</button>
-  <button onclick="addRow()" id="btnAddRow" disabled>добавить строку</button>
-  <button onclick="removeRow()" id="btnRemoveRow" disabled>удалить строку</button>
+  <button class="button-34" onclick="createTable()" id="btnCreateTable">Создать таблицу</button>
+  <button class="button-34" onclick="addRow()" id="btnAddRow" disabled>Добавить строку</button>
+  <button class="button-34" onclick="removeRow()" id="btnRemoveRow" disabled>Удалить строку</button>
   <input type="number" id="rowToDeleteNumber" min="1" required disabled />
 
   <div id="container"></div>
